--- a/HCore-Identity/Resources/Messages.de.resx
+++ b/HCore-Identity/Resources/Messages.de.resx
@@ -373,13 +373,13 @@
     <value>Ihr Profil wurde aktualisiert</value>
   </data>
   <data name="accept_privacy_policy" xml:space="preserve">
-    <value>Ich habe die {0} &lt;a href="{1}" target="_blank"&gt;Datenschutzerklärung&lt;/a&gt; gelesen. Ich bin damit einverstanden, dass meine persönlichen Daten gemäß dieser Datenschutzerklärung elektronisch erfasst und gespeichert werden.</value>
+    <value>Ich habe die {0} &lt;a href="javascript:javascript:openUrlInNewWindow('{1}');"&gt;Datenschutzerklärung&lt;/a&gt; gelesen. Ich bin damit einverstanden, dass meine persönlichen Daten gemäß dieser Datenschutzerklärung elektronisch erfasst und gespeichert werden.</value>
   </data>
   <data name="accept_terms_and_conditions" xml:space="preserve">
-    <value>Ich akzeptiere die &lt;a href="{1}" target="_blank"&gt;Allgemeinen Geschäftsbedingungen&lt;/a&gt; von {0}.</value>
+    <value>Ich akzeptiere die &lt;a href="javascript:openUrlInNewWindow('{1}');"&gt;Allgemeinen Geschäftsbedingungen&lt;/a&gt; von {0}.</value>
   </data>
   <data name="accept_communication" xml:space="preserve">
-    <value>Ich bin damit einverstanden, in Übereinstimmung mit der &lt;a href="{1}" target="_blank"&gt;Datenschutzerklärung&lt;/a&gt; E-Mail-Nachrichten über {0} Produkte und Neuigkeiten zu erhalten. Ich habe verstanden, dass ich diese Zustimmung jederzeit widerrufen kann.</value>
+    <value>Ich bin damit einverstanden, in Übereinstimmung mit der &lt;a href="javascript:openUrlInNewWindow('{1}');"&gt;Datenschutzerklärung&lt;/a&gt; E-Mail-Nachrichten über {0} Produkte und Neuigkeiten zu erhalten. Ich habe verstanden, dass ich diese Zustimmung jederzeit widerrufen kann.</value>
   </data>
   <data name="change_password_not_possible" xml:space="preserve">
     <value>Sie können Ihr Passwort hier nicht ändern, weil Ihr Benutzerkonto extern verwaltet wird. Für weitere Auskünfte kontaktieren Sie bitte Ihren Systemadministrator.</value>
