--- a/HCore-Translations/Resources/Messages.de.resx
+++ b/HCore-Translations/Resources/Messages.de.resx
@@ -346,7 +346,7 @@
     <value>Die EU VAT ID ist zu lang</value>
   </data>
   <data name="please_accept_terms_and_conditions" xml:space="preserve">
-    <value>Bitte akzeptieren Sie unsere Allgemeinen Geschäftsbedingungen</value>
+    <value>Bitte akzeptieren Sie unsere Nutzungsbedingungen</value>
   </data>
   <data name="please_accept_privacy_policy" xml:space="preserve">
     <value>Bitte akzeptieren Sie unsere Datenschutzerklärung</value>
