--- a/HCore-Identity/Resources/Messages.resx
+++ b/HCore-Identity/Resources/Messages.resx
@@ -247,7 +247,7 @@
     <value>Please click the button below to confirm.</value>
   </data>
   <data name="manage_account_header" xml:space="preserve">
-    <value>Manage your account</value>
+    <value>Manage your user account</value>
   </data>
   <data name="manage_notification_settings_link" xml:space="preserve">
     <value>Notifications</value>
@@ -259,7 +259,7 @@
     <value>Profile</value>
   </data>
   <data name="manage_account_subheader" xml:space="preserve">
-    <value>You can change your account settings here</value>
+    <value>You can change your user account settings here.</value>
   </data>
   <data name="new_password" xml:space="preserve">
     <value>New password</value>
