--- a/HCore-Translations/Resources/Messages.de.resx
+++ b/HCore-Translations/Resources/Messages.de.resx
@@ -495,6 +495,9 @@
   <data name="argument_missing" xml:space="preserve">
     <value>Das Argument fehlt</value>
   </data>
+  <data name="link_invalid" xml:space="preserve">
+    <value>Der Link ist ausgelaufen oder ungültig</value>
+  </data>
   <data name="developer_not_found" xml:space="preserve">
     <value>Der Entwickler wurde nicht gefunden</value>
   </data>
