--- a/HCore-Identity/Resources/Messages.resx
+++ b/HCore-Identity/Resources/Messages.resx
@@ -322,7 +322,7 @@
     <value>Forgot password?</value>
   </data>
   <data name="sign_in_button_already_have_account" xml:space="preserve">
-    <value>Do you already have an user account?</value>
+    <value>Do you already have a user account?</value>
   </data>
   <data name="sign_in_button_register" xml:space="preserve">
     <value>Register new user account</value>
