--- a/HCore-Translations/Resources/Messages.resx
+++ b/HCore-Translations/Resources/Messages.resx
@@ -342,14 +342,14 @@
   <data name="state_too_long" xml:space="preserve">
     <value>The state is too long</value>
   </data>
-  <data name="eu_vat_id_missing" xml:space="preserve">
-    <value>The EU VAT ID is missing</value>
+  <data name="vat_id_missing" xml:space="preserve">
+    <value>The VAT ID is missing</value>
   </data>
-  <data name="eu_vat_id_invalid" xml:space="preserve">
-    <value>The EU VAT ID is invalid</value>
+  <data name="vat_id_invalid" xml:space="preserve">
+    <value>The VAT ID is invalid</value>
   </data>
-  <data name="eu_vat_id_too_long" xml:space="preserve">
-    <value>The EU VAT ID is too long</value>
+  <data name="vat_id_too_long" xml:space="preserve">
+    <value>The VAT ID is too long</value>
   </data>
   <data name="please_accept_terms_and_conditions" xml:space="preserve">
     <value>Please accept our Terms and Conditions</value>
