--- a/HCore-Translations/Resources/Messages.de.resx
+++ b/HCore-Translations/Resources/Messages.de.resx
@@ -660,4 +660,73 @@
   <data name="contact_person_name_too_long" xml:space="preserve">
     <value>Der Name der Kontaktperson ist zu lang</value>
   </data>
+  <data name="scoped_tenant_uuid_missing" xml:space="preserve">
+    <value>Die eingeschränkte Mandanten-UUID fehlt</value>
+  </data>
+  <data name="scoped_tenant_uuid_invalid" xml:space="preserve">
+    <value>Die eingeschränkte Mandanten-UUID ist ungültig</value>
+  </data>
+  <data name="description_too_long" xml:space="preserve">
+    <value>Die Beschreibung ist zu lang</value>
+  </data>
+  <data name="comment_too_long" xml:space="preserve">
+    <value>Der Kommentar ist zu lang</value>
+  </data>
+  <data name="order_id_missing" xml:space="preserve">
+    <value>Die Auftragsnummer fehlt</value>
+  </data>
+  <data name="order_id_too_long" xml:space="preserve">
+    <value>Die Auftragsnummer ist zu lang</value>
+  </data>
+  <data name="confirmation_id_missing" xml:space="preserve">
+    <value>Die Bestätigungsnummer fehlt</value>
+  </data>
+  <data name="confirmation_id_too_long" xml:space="preserve">
+    <value>Die Bestätigungsnummer ist zu lang</value>
+  </data>
+  <data name="submission_message_too_long" xml:space="preserve">
+    <value>Die Nachricht für die Einreichung ist zu lang</value>
+  </data>
+  <data name="rejection_reason_too_long" xml:space="preserve">
+    <value>Der Grund für die Ablehnung ist zu lang</value>
+  </data>
+  <data name="cancellation_reason_too_long" xml:space="preserve">
+    <value>Der Grund für das Storno ist zu lang</value>
+  </data>
+  <data name="cancellation_reason_missing" xml:space="preserve">
+    <value>Der Grund für das Storno fehlt</value>
+  </data>
+  <data name="external_user_group_identifier_invalid" xml:space="preserve">
+    <value>Die Zuordnung zur externen Benutzergruppe enthält ungültige Zeichen</value>
+  </data>
+  <data name="external_user_group_identifier_too_long" xml:space="preserve">
+    <value>Die Zuordnung zur externen Benutzergruppe ist zu lang</value>
+  </data>
+  <data name="search_term_missing" xml:space="preserve">
+    <value>Der Suchbegriff fehlt</value>
+  </data>
+  <data name="search_term_invalid" xml:space="preserve">
+    <value>Der Suchbegriff ist ungültig</value>
+  </data>
+  <data name="search_term_loo_long" xml:space="preserve">
+    <value>Der Suchbegriff ist zu lang</value>
+  </data>
+  <data name="last_updated_at_from_invalid" xml:space="preserve">
+    <value>Das Von-Aktualisierungs-Datum ist ungültig</value>
+  </data>
+  <data name="last_updated_at_to_before_last_updated_at_from" xml:space="preserve">
+    <value>Das Bis-Aktualisierungs-Datum ist auf ein Datum vor dem Ab-Aktualisierungs-Datum gesetzt</value>
+  </data>
+  <data name="last_updated_at_to_invalid" xml:space="preserve">
+    <value>Das Bis-Aktualisierungs-Datum ist ungültig</value>
+  </data>
+  <data name="notification_uuid_missing" xml:space="preserve">
+    <value>Die Benachrichtigungs-UUID fehlt</value>
+  </data>
+  <data name="notification_uuid_invalid" xml:space="preserve">
+    <value>Die Benachrichtigungs-UUID ist ungültig</value>
+  </data>
+  <data name="billing_type_invalid" xml:space="preserve">
+    <value>Der Abrechnungsmodus ist ungültig</value>
+  </data>
 </root>
