--- a/HCore-Translations/Resources/Messages.resx
+++ b/HCore-Translations/Resources/Messages.resx
@@ -729,4 +729,13 @@
   <data name="billing_type_invalid" xml:space="preserve">
     <value>The billing type is invalid</value>
   </data>
+  <data name="optimistic_lock_violated" xml:space="preserve">
+    <value>The element was modified by another user, please try again</value>
+  </data>
+  <data name="user_group_optimistic_lock_violated" xml:space="preserve">
+    <value>The user group '{name}' was modified by another user, please try again</value>
+  </data>
+  <data name="user_optimistic_lock_violated" xml:space="preserve">
+    <value>The user '{name}' was modified by another user, please try again</value>
+  </data>
 </root>
