Handle Azure AD 150 user group limit

--- a/HCore-Translations/Resources/Messages.de.resx
+++ b/HCore-Translations/Resources/Messages.de.resx
@@ -747,4 +747,7 @@
   <data name="user_optimistic_lock_violated" xml:space="preserve">
     <value>Der Benutzer '{name}' wurde von einem anderen Benutzer geändert. Bitte versuchen Sie es erneut</value>
   </data>
+  <data name="claims_principal_has_too_many_groups" xml:space="preserve">
+    <value>Der Benutzer ist mehr als 150 Benutzergruppen zugeordnet. Dies wird von Azure AD nicht unterstützt. Bitte limitieren Sie die Anzahl der Benutzergruppen oder steigen Sie auf Anwendungs-Rollen um</value>
+  </data>
 </root>
