--- a/HCore-Identity/Resources/Messages.resx
+++ b/HCore-Identity/Resources/Messages.resx
@@ -222,6 +222,9 @@
   <data name="last_name" xml:space="preserve">
     <value>Last name</value>
   </data>
+  <data name="organization" xml:space="preserve">
+    <value>Company name</value>
+  </data>
   <data name="log_out_confirmed_header" xml:space="preserve">
     <value>You are now logged out</value>
   </data>
